--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -63,3 +63,14 @@ a {
         float: left!important;
     } 
 }
+
+/* code blocks */
+div.highlighter-rouge {
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    margin-bottom: 1.5rem;
+    margin-top: 1.5rem;
+    overflow: auto;
+    padding: 1rem 1.5rem;
+    border-radius: .25rem;
+}
