--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -74,3 +74,9 @@ div.highlighter-rouge {
     padding: 1rem 1.5rem;
     border-radius: .25rem;
 }
+
+/* term highlighting */
+.term {
+    font-size: 1.5rem;
+    font-weight: bolder;
+}
