--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -77,8 +77,8 @@ div.highlighter-rouge {
 
 /* term highlighting */
 .term {
-    font-size: 1.5rem;
-    font-weight: bolder;
+    font-size: 1.3rem;
+    font-weight: bold;
 }
 
 /* scroll to top */
