--- a/_includes/template/head.html
+++ b/_includes/template/head.html
@@ -5,7 +5,7 @@
 <meta name="description" content="{{ site.description | escape }}">
 <meta name="keywords" content="{{ site.keywords | escape }}">
 <meta name="author" content="{{ site.author }}">
-<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | absolute_url }}">
+<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 
 <!--
   _      __         __        __           ______               __     __     
