--- a/_layouts/section.html
+++ b/_layouts/section.html
@@ -12,7 +12,7 @@ layout: default
 <div class="text-center mb-4 border rounded p-2">
     <figure class="mb-0">
         <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/{{ page.youtubeid }}?rel=0&modestbranding=1" allowfullscreen></iframe>
+            <iframe title="{{ page.title }} section video" class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/{{ page.youtubeid }}?rel=0&modestbranding=1" allowfullscreen></iframe>
         </div>
         <figcaption class="figure-caption mt-1"><a href="https://youtu.be/{{ page.youtubeid }}" target="_blank" rel="noopener">Section Video</a></figcaption>
     </figure>
