--- a/_includes/template/google-analytics.html
+++ b/_includes/template/google-analytics.html
@@ -15,7 +15,7 @@
   })();
 </script>
 <!-- End Matomo Code -->
-{% if site.google_analytics %}
+{% if site.google-analytics-id %}
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google-analytics-id }}"></script>
 <script>
