--- a/_includes/template/head.html
+++ b/_includes/template/head.html
@@ -30,6 +30,6 @@
 
 <link rel="stylesheet" href="{{ '/assets/lib/bootstrap.min.css' | relative_url }}" type="text/css">
 <link rel="stylesheet" href="{{ '/assets/lib/fontawesome-free/css/all.min.css' | relative_url }}" >
-<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}">
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
 {% if site.google-analytics-id %}{% include template/google-analytics.html %}{% endif %}
