--- a/_includes/template/head.html
+++ b/_includes/template/head.html
@@ -32,4 +32,4 @@
 <link rel="stylesheet" href="{{ '/assets/lib/fontawesome-free/css/all.min.css' | relative_url }}" >
 <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
 
-{% if site.google-analytics-id %}{% include template/google-analytics.html %}{% endif %}
+{% if jekyll.environment == "production" %}{% include template/analytics.html %}{% endif %}
